examples/cursor/web/src/base/error/index.ts
import { InvalidTokenError } from './InvalidTokenError';
import { NetworkError } from './NetworkError';
import { NoPermissionError } from './NoPermissionError';
import { RequestError } from './RequestError';
import { ResetPasswordError } from './ResetPasswordError';

export default {
  RequestError,
  NetworkError,
  ResetPasswordError,
  InvalidTokenError,
  NoPermissionError,
};
